--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "max30205"
 version = "0.1.0"
+authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/dragazo/max30205"
+documentation = "https://docs.rs/max30205"
+description = """
+A driver for the MAX30205 temperature sensor communicating over I2C.
+"""
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
